# spectro

./: CHANGELOG.md  README.md  pyproject.toml  spectrorc.example
docs/a2a/: SPECTRO_INTEGRATION_GUIDE.md
spectro/: __init__.py  analysis.py  cli.py  core.py  exceptions.py
tests/: test_spectro.py
